
SVN
-------------------------------

XML:   Resolved issue CASTOR-385 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Source Generator uses the name "Content" which conflicts with any element
       named "Content."
       Details: http://jira.codehaus.org/browse/CASTOR-385
       (Edward - 20061015)

All:   Resolved issue CASTOR-1584 using contribution from Steven Dolg [stevendolg@gmx.at]
       Refactored AbstractMappingLoader.
       Details: http://jira.codehaus.org/browse/CASTOR-1584
       (Ralf - 20061015)

XML:   Resolved issue CASTOR-416 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Source generator now overloads resetValues() on XMLFieldHandler for mutli-valued properties.
       Details: http://jira.codehaus.org/browse/CASTOR-416
       (Werner - 20061015)

XML:   Resolved issue CASTOR-482 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Source generator now adds is<Property> methods for boolean members.
       Details: http://jira.codehaus.org/browse/CASTOR-482
       (Werner - 20061015)
       
XML:   Resolved issue CASTOR-1623 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Clean up checkstyle complaints in builder
       Details: http://jira.codehaus.org/browse/CASTOR-1623
       (Edward - 20061014)

XML:   Resolved issue CASTOR-1555 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Correct SRCGEN JavaDoc tags that fail validation
       Details: http://jira.codehaus.org/browse/CASTOR-1555
       (Edward - 20061012)

XML:   Resolved issue CASTOR-204 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Invalid Instance Document containing ALL elements of a schema definitions choice is not unmarshallable
       Details: http://jira.codehaus.org/browse/CASTOR-204
       (Edward - 20061012)

All:   Resolved issue CASTOR-1619 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]